📖 Add News section with KubeStellar Console announcement
Add a News section to the docs site to satisfy Crowdin open-source
license eligibility. Includes the KubeStellar Console press release
as the first entry. Updates all blog.kubestellar.io links (dead) to
point to the new /docs/news section.

Signed-off-by: Andy Anderson <andy@clubanderson.com>
Signed-off-by: Andrew Anderson <andy@clubanderson.com>

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -135,7 +135,10 @@ nav:
   - KubeStellar MCP:
       - Overview: kubestellar-mcp/index.md
       - Getting Started: kubestellar-mcp/overview/intro.md
-  - 'Blog': https://medium.com/@kubestellar/list/predefined:e785a0675051:READING_LIST" target="_blank
+  - News:
+      - Latest News: news/index.md
+      - "KubeStellar Console Announcement": news/kubestellar-console-announcement.md
+  # - 'Blog': https://medium.com/@kubestellar/list/predefined:e785a0675051:READING_LIST" target="_blank
   # # - Auto generated:
   #   - ... | auto-generated/*/*.md
 
