🐛 Fix edit button 404 for versioned docs branches
Signed-off-by: Andrew Anderson <andy@clubanderson.com>

--- a/netlify.toml
+++ b/netlify.toml
@@ -3,7 +3,7 @@
 
 
 [build]
-  command = "npm run build"
+  command = "NEXT_PUBLIC_BRANCH=${BRANCH:-main} npm run build"
   publish = ".next"
 
 [build.environment]
@@ -16,57 +16,60 @@
 # Version branches follow the pattern: docs/{version}
 # Netlify will create deploy previews at: https://docs-X-Y-Z--kubestellar-docs.netlify.app
 [context.branch-deploy]
-  command = "npm run build"
+  command = "NEXT_PUBLIC_BRANCH=${BRANCH:-main} npm run build"
 
 # Deploy contexts for version branches
+[context."docs/0.29.0"]
+  command = "NEXT_PUBLIC_BRANCH=docs/0.29.0 npm run build"
+
 [context."docs/0.28.0"]
-  command = "npm run build"
+  command = "NEXT_PUBLIC_BRANCH=docs/0.28.0 npm run build"
 
 [context."docs/0.27.2"]
-  command = "npm run build"
+  command = "NEXT_PUBLIC_BRANCH=docs/0.27.2 npm run build"
 
 [context."docs/0.27.1"]
-  command = "npm run build"
+  command = "NEXT_PUBLIC_BRANCH=docs/0.27.1 npm run build"
 
 [context."docs/0.27.0"]
-  command = "npm run build"
+  command = "NEXT_PUBLIC_BRANCH=docs/0.27.0 npm run build"
 
 [context."docs/0.26.0"]
-  command = "npm run build"
+  command = "NEXT_PUBLIC_BRANCH=docs/0.26.0 npm run build"
 
 [context."docs/0.25.1"]
-  command = "npm run build"
+  command = "NEXT_PUBLIC_BRANCH=docs/0.25.1 npm run build"
 
 [context."docs/0.25.0"]
-  command = "npm run build"
+  command = "NEXT_PUBLIC_BRANCH=docs/0.25.0 npm run build"
 
 [context."docs/0.24.0"]
-  command = "npm run build"
+  command = "NEXT_PUBLIC_BRANCH=docs/0.24.0 npm run build"
 
 [context."docs/0.23.1"]
-  command = "npm run build"
+  command = "NEXT_PUBLIC_BRANCH=docs/0.23.1 npm run build"
 
 [context."docs/0.23.0"]
-  command = "npm run build"
+  command = "NEXT_PUBLIC_BRANCH=docs/0.23.0 npm run build"
 
 [context."docs/0.22.0"]
-  command = "npm run build"
+  command = "NEXT_PUBLIC_BRANCH=docs/0.22.0 npm run build"
 
 [context."docs/0.21.2"]
-  command = "npm run build"
+  command = "NEXT_PUBLIC_BRANCH=docs/0.21.2 npm run build"
 
 [context."docs/0.21.1"]
-  command = "npm run build"
+  command = "NEXT_PUBLIC_BRANCH=docs/0.21.1 npm run build"
 
 [context."docs/0.21.0"]
-  command = "npm run build"
+  command = "NEXT_PUBLIC_BRANCH=docs/0.21.0 npm run build"
 
 # Kubeflex version branches
 [context."docs/kubeflex/0.8.0"]
-  command = "npm run build"
+  command = "NEXT_PUBLIC_BRANCH=docs/kubeflex/0.8.0 npm run build"
 
 [context."docs/kubeflex/0.7.0"]
-  command = "npm run build"
+  command = "NEXT_PUBLIC_BRANCH=docs/kubeflex/0.7.0 npm run build"
 
 # CORS headers for shared config (allows branch deploys to fetch from production)
 [[headers]]
